--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "music-streaming-app",
+  "author": "Faotu Happy",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,10 +10,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/auth-helpers-nextjs": "^0.8.2",
+    "@supabase/auth-helpers-react": "^0.4.2",
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
+    "stripe": "^14.2.0",
     "tailwind-merge": "^1.14.0"
   },
   "devDependencies": {
