--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
     "stripe": "^14.2.0",
     "tailwind-merge": "^1.14.0",
