--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react-icons": "^4.11.0",
     "stripe": "^14.2.0",
     "tailwind-merge": "^1.14.0",
-    "uniquid": "^1.1.4",
+    "uniqid": "^5.4.0",
     "zustand": "^4.4.4"
   },
   "devDependencies": {
