--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-slider": "^1.1.2",
     "@radix-ui/themes": "^2.0.0",
     "@supabase/auth-helpers-nextjs": "^0.8.2",
     "@supabase/auth-helpers-react": "^0.4.2",
@@ -26,6 +27,7 @@
     "stripe": "^14.2.0",
     "tailwind-merge": "^1.14.0",
     "uniqid": "^5.4.0",
+    "use-sound": "^4.0.1",
     "zustand": "^4.4.4"
   },
   "devDependencies": {
