--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-hook-form": "^7.47.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
+    "react-spinners": "^0.13.8",
     "stripe": "^14.2.0",
     "tailwind-merge": "^1.14.0",
     "uniqid": "^5.4.0",
